--- a/assets/css/courseDetail.css
+++ b/assets/css/courseDetail.css
@@ -19,6 +19,21 @@ body {
 	font-size: 2rem;
 	color: white;
 }
+.search-container {
+	max-width: 400px;
+	font-size: 2rem;
+	color: white;
+}
+
+input {
+	margin-top: 0.25rem;
+	width: 100%;
+	border-radius: 0.375rem;
+	border: 1px solid #e5e7eb;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05);
+	font-size: 0.875rem;
+	padding: 0.5rem;
+}
 
 .container {
 	padding: 30px;
